# ciencia-datos-integrador

eda/: pyproject.toml
integrador/: .gitignore
integrador/eda/: main.ipynb
integrador/project/: requirements.txt  trump_btc_analysis_dataset.csv
integrador/segunda-entrega/: main.ipynb
project/dags/: main.py
tp2/: .gitignore  main.ipynb
